@@ -37,6 +37,10 @@ ExecScript
 ----------------------
 * Handle commands with spaces on Linux (CC-551).  Patch by Frederic Mockel.
 
+Main
+----------------------
+* Add logging of root exception when config file fails to parse on load.
+
 MKS
 ----------------------
 * Fix synchronization failure on Linux (CC-576).
